# lcd-demo

./: .gitignore  .gitmodules  CMakeLists.txt  MK82FN256xxx15_flash.ld  README.md  build_all.sh  build_debug.sh  build_release.sh
lib/: CMakeLists.txt  README.md
lib/ft6x36/: CMakeLists.txt
lib/kinetis-sdk/: CMakeLists.txt
lib/microcli/: CMakeLists.txt
lib/printf/: CMakeLists.txt  printf_port.c
src/: CMakeLists.txt  assert.c  debug_console.c  debug_console.h  led_blink.c  led_blink.h  main.c  startup_MK82F25615.S  timer_utils.c  timer_utils.h
src/board/: CMakeLists.txt  board.c  board.h  clock_config.c  clock_config.h  gpio_cfg.h  lcd_if.c  lcd_if.h  pinmux.c  pinmux.h  pinmux_cfg.h  qspi_flash.c  qspi_flash.h
